--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "3d-portfolio",
-  "private": true,
+  "name": "three-demo",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "serve": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.9.9"
+    "vite": "^2.3.0"
   },
   "dependencies": {
-    "three": "^0.141.0"
+    "three": "^0.128.0"
   }
 }
